-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.9.0
-
None
-
3
-
9223372036854775807
Do not set stale flags for new created OSP object, otherwise it will cause the following write operation to return ESTALE, especially when cancelling the update record.
[112275.488838] LustreError: 82035:0:(llog_cat.c:744:llog_cat_cancel_records()) lustre-MDT0000-osp-MDT0001: fail to cancel 1 of 1 llog-records: rc = -116 [112275.489841] LustreError: 82035:0:(update_trans.c:1307:distribute_txn_cancel_records()) lustre-MDT0000-osp-MDT0001: batchid 1 cancel update log 0x2:1025.1 : rc = -116 [112275.491873] LustreError: 82035:0:(update_trans.c:1307:distribute_txn_cancel_records()) lustre-MDT0001-osd: batchid 1 cancel update log 0x2:1073742848.1 : rc = 0
This problem seems brought in by patch http://review.whamcloud.com/19041 LU-7660,
so it only needs to be fixed in 2.9
- is related to
-
LU-8472 sanity-scrub test_5 times out
-
- Resolved
-